--- a/frontend/loginMAF.html
+++ b/frontend/loginMAF.html
@@ -98,8 +98,8 @@
             })
             .fail(function(result) {
                 let response = result.responseJSON
-                if (response && response.message) {
-                    alert(response.message);
+                if (response && response.error) {
+                    alert(response.error);
                 } else {
                     alert("Errore nel login del MAF")
                 }
