--- a/frontend/approvazioneArbitri.html
+++ b/frontend/approvazioneArbitri.html
@@ -61,7 +61,10 @@
             loadData: function() {
                 let vm = this;
                 $.ajax({
-                    url: API_V2 + "arbitridaapprovare",
+                    url: API_V2 + "arbitri",
+                    data: {
+                        approvato: false
+                    },
                     headers: {
                         'X-Access-token': AUTH_TOKEN
                     },
@@ -73,7 +76,7 @@
             approva: function(arbitro) {
                 let vm = this;
                 $.ajax({
-                    url: API_V2 + "approvaarbitro/" + arbitro._id,
+                    url: API_V2 + "arbitri/" + arbitro._id,
                     method: 'PUT',
                     headers: {
                         'X-Access-token': AUTH_TOKEN
