--- a/frontend/visualizzazioneSquadre.html
+++ b/frontend/visualizzazioneSquadre.html
@@ -2,7 +2,7 @@
 <html lang="it">
     <head>
         <meta charset="UTF-8">
-        <title>Visualizzazione Partite</title>
+        <title>Visualizzazione Squadre</title>
     </head>
 
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
@@ -10,43 +10,33 @@
     <link rel="stylesheet" href="assets/css/ModificaStyle.css">
 
     <body>
-        <!-- Header PAGINA VISUALIZZAZIONE PARTITE -->
+        <!-- Header PAGINA VISUALIZZAZIONE SQUADRE -->
         <section>
             <div class="main-banner" id="top">
                 <div class="caption" bgcolour="grey">
-                <h2>Visualizzazione <em> Partite</em></h2>
+                <h2>Visualizzazione <em> Squadre</em></h2>
                 </div>
             </div>
         </section>
 
         <section>
-            <h3>Partite Girone</h3>              
-            <div id="girone">
-                <!-- Create here -->
-            </div>   
-        </section>
-
-        <section>
-            <h3>Partite Tabellone</h3>
-            <div id="tabellone">
+            <h3>Squadre Iscritte</h3>
+            <div id="squadre">
                 <!-- Create here -->
             </div>
         </section>
-
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+ 
         <script>
-
             async function getData(){
-                const apiUrl = "http://localhost:8080/api/v2/partite"
+                const apiUrl = "http://localhost:8080/api/v2/squadre"
                 const responseApi = await fetch(apiUrl)                     // Get API               
                 const response = await responseApi.json();                  // Json to js variable
                 
-                console.log(response);                                      // Log tutte le partite
-                console.log('Elements to print:' + response.length);        // Log Numero Partite
+                console.log(response);                                      // Log tutte le squadre
+                console.log('Elements to print:' + response.length);        // Log Numero squadre
 
-                window.localStorage.clear();                                // Clear localstorage keys buffer 
-
-                for(i=0;i<response.length;i++){
+                /*for(i=0;i<response.length;i++){
                     if(response[i].fase.localeCompare('gironi')==0){
                         var gironeContainer = document.getElementById("girone");
                         var divGironi=document.createElement("div");
@@ -55,12 +45,11 @@
                         divGironi.innerHTML = ' | LUOGO: ' + response[i].luogo + ' | CASA: ' + response[i].casa + ' | OSPITE: ' + response[i].ospite + ' | ARBITRO: ' + response[i].arbitro + ' | FASE: ' + response[i].fase + " | ";               
                         console.log(response[i].casa, " VS ", response[i].ospite, " ID: ", response[i]._id);
                         gironeContainer.appendChild(divGironi);
-                        
+                */        
                         /**********BUTTON*******************
                         var insertButtonGir = document.createElement("button");
                         var idBottoneGir = 'BottonePartitaGirone_'+i;                       // ID div creato per apposita partita
                         insertButtonGir.setAttribute('id', idBottoneGir);
-                        localStorage.setItem("ID-PARTITA_"+index, _idPartitaDB);
                         insertButtonGir.setAttribute('onclick', "location.href='inserimentoReferto.html'");       //Apri pagina inserimentoReferto.html
                         insertButtonGir.innerHTML = "insert";                      
                         divGironi.appendChild(insertButtonGir);
@@ -69,15 +58,19 @@
 
 
                         //*************INPUT******************
-                        var insertSubmitGir = document.createElement("input");
+                    /*    var insertSubmitGir = document.createElement("input");
                         var idSubmitGir = 'SubmitPartitaGirone_'+i;                         // ID div creato per apposita partita
-                        const idPartitaDB = "button_"+response[i]._id;                                // ID Partita nel DB
+                        const idPartitaDB = response[i]._id;                                // ID Partita nel DB
 
                         insertSubmitGir.setAttribute('id', idPartitaDB);                    //Assegno L'ID della partita al bottone
                         insertSubmitGir.setAttribute('type', "submit");
-                        insertSubmitGir.setAttribute('value', "insert");                      
+                        localStorage.setItem("ID-PARTITA_"+i, idPartitaDB);
+                        insertSubmitGir.setAttribute('onclick',"location.href='inserimentoReferto.html';");                      
                         divGironi.appendChild(insertSubmitGir);
                         //************************************
+
+
+
 
                     }else if(response[i].fase.localeCompare('tabellone')==0){
                         var tabContainer = document.getElementById("tabellone");
@@ -87,27 +80,7 @@
                         divTab.innerHTML = ' | LUOGO: ' + response[i].luogo + ' | CASA: ' + response[i].casa + ' | OSPITE: ' + response[i].ospite + ' | ARBITRO: ' + response[i].arbitro + ' | FASE: ' + response[i].fase + " | ";               
                         tabContainer.appendChild(divTab);
                     }                 
-                }  
-                for(i=1;i<response.length;i++){
-                    idp = "button_"+response[i]._id
-                    console.log("Index Of Buttons", idp, " Cycle: " , i);
-                    const buttonFeature = document.getElementById("idp");
-
-                    buttonFeature.addEventListener('click', () => {
-                        console.log(buttonFeature,id);
-                    });
-                    /*
-                    buttonFeature.setAttribute("onclick", "localStorage.setItem(\"ID-PARTITA_\"+i, idp);");
-                    */
-                }
-            }
-
-            function key(index, idp){
-                buttonFeature = document.getElementById("idp")
-                console.log("Enering Function: ", _index, _idPartitaDB);
-                localStorage.setItem("ID-PARTITA_"+index, _idPartitaDB);
-                location.href='inserimentoReferto.html';
-                return
+                }*/                
             }
             getData();
         </script>
