fixed api uris with API-V1 and API_V2

--- a/frontend/avviatorneo.html
+++ b/frontend/avviatorneo.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="assets/css/ModificaStyle.css">
     <script>
         function attivatorneo(){
-            const apiUrl = "http://127.0.0.1:3000/api/v2/avviatorneo";
+            const apiUrl = API_V2+"avviatorneo";
             $.ajax({
                 url:apiUrl,
                 type: 'PUT',
