--- a/frontend/login.html
+++ b/frontend/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Registrati</title>
+    <title>Login</title>
 </head>
 
 <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
@@ -21,7 +21,7 @@
         </div>
         <ul>
             <li><a href="loginMAF.html">Login MAF</a></li>
-            <li><a href="loginARB.html">Registra Arbitro</a></li>
+            <li><a href="loginARB.html">Login Arbitro</a></li>
         </ul>
     </section>
 <!-- Footer bottone HOME -->
