--- a/frontend/index.html
+++ b/frontend/index.html
@@ -146,7 +146,7 @@ https://templatemo.com/tm-548-training-studio
     <!--SCRIPT FATTO DA MATTIA-->
     <script>
        async function getData(){
-          const apiUrl = "http://localhost:8080/api/v2/partite"
+          const apiUrl = API_V2+"partite"
           const responseApi = await fetch(apiUrl)                     // Get API               
           const response = await responseApi.json();                  // Json to js variable
           
