--- a/frontend/loginMAF.html
+++ b/frontend/loginMAF.html
@@ -81,7 +81,7 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script>
-        const apiUrl = "http://localhost:8080/api/v1/maf"
+        const apiUrl = API_V1+"maf"
 
         function checkAuthentication(token) {
             $.ajax({
