--- a/frontend/registratiArbitro.html
+++ b/frontend/registratiArbitro.html
@@ -50,7 +50,7 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script>
-        const apiUrl = "http://localhost:8080/api/v1/arbitro"
+        const apiUrl = API_V1+"arbitro"
 
         $(document).ready(function() {
             $("#myform").submit(function(e) {
