--- a/frontend/aggiungiPartita.html
+++ b/frontend/aggiungiPartita.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="assets/css/ModificaStyle.css">
         <script src="aggiungiPartita.js"></script>
         <script src="getCookie.js"></script>
+        <script src="./script.js"></script>
     </head>
 
     <body>
