--- a/frontend/approvaSquadre.html
+++ b/frontend/approvaSquadre.html
@@ -2,6 +2,7 @@
     <head>
         <script src="getCookie.js"></script>
         <script src="approvaSquadre.js"></script>
+        <script src="./script.js"></script>
     </head>
 
     <body onload="loadSquadre()">
