--- a/frontend/index.html
+++ b/frontend/index.html
@@ -142,7 +142,7 @@ https://templatemo.com/tm-548-training-studio
     
     <!-- Global Init -->
     <script src="assets/js/custom.js"></script>
-
+    <script src="./script.js"></script>
     <!--SCRIPT FATTO DA MATTIA-->
     <script>
        async function getData(){
