--- a/frontend/avviatorneo.html
+++ b/frontend/avviatorneo.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.css">
     <link rel="stylesheet" href="assets/css/ModificaStyle.css">
+    <script src="./script.js"></script>
     <script>
         function attivatorneo(){
             const apiUrl = API_V2+"avviatorneo";
