--- a/frontend/loginMAF.html
+++ b/frontend/loginMAF.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.css">
     <link rel="stylesheet" href="assets/css/ModificaStyle.css">
     <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.css" />
+    <script src="./script.js"></script>
 </head>
 
 <body>
