--- a/frontend/registratiArbitro.html
+++ b/frontend/registratiArbitro.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.css">
     <link rel="stylesheet" href="assets/css/ModificaStyle.css">
+    <script src="./script.js"></script>
 </head>
 
 <body>
