--- a/frontend/index.html
+++ b/frontend/index.html
@@ -57,6 +57,9 @@ https://templatemo.com/tm-548-training-studio
                             <li class="scroll-to-section"><a href="#calendari">Calendario</a></li> <!-- to implement-->
                             <li class="scroll-to-section"><a href="registrati.html">Registrati</a></li>
                             <li class="scroll-to-section"><a href="login.html">Login</a></li>
+                            <li class="scroll-to-section"><a href="setupTorneo.html">Crea Torneo</a></li>
+                            <li class="scroll-to-section"><a href="approvaSquadre.html">Approva squadre</a></li>
+                            <li class="scroll-to-section"><a href="approvazioneArbitri.html">Approva arbitri</a></li>
                         </ul>
                         <a class='menu-trigger'>
                             <span>Menù</span>
