--- a/frontend/setupTorneo.html
+++ b/frontend/setupTorneo.html
@@ -68,7 +68,7 @@
         //parte di event listener e invio dati
         async function sendData(){
             console.log("funzione avviata\n")
-            const apiUrl = "http://127.0.0.1:3000/api/v1/setuptorneo";
+            const apiUrl = API_V1+"setuptorneo";
             var g=document.getElementById("gironi").value;    //numero di gironi
             var s= document.getElementById("squadre").value;  //numero di squadre
             var spg= document.getElementById("spg").value;    //numero di squadre per girone
