--- a/frontend/avviatorneo.html
+++ b/frontend/avviatorneo.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.css">
     <link rel="stylesheet" href="assets/css/ModificaStyle.css">
     <script src="./script.js"></script>
+    <script src="./getCookie.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script>
         function attivatorneo(){
