--- a/frontend/approvaSquadre.html
+++ b/frontend/approvaSquadre.html
@@ -7,6 +7,12 @@
 
     <body onload="loadSquadre()">
         <div id="squadre"></div>
+         <!-- Footer bottone HOME -->
+        <div class="footer">
+            <div class="button-home">
+                <button type="submit" onclick="location.href='index.html'">HOME</button>
+            </div>
+        </div>
     </body>
 
 </html>
