--- a/frontend/index.html
+++ b/frontend/index.html
@@ -58,6 +58,7 @@ https://templatemo.com/tm-548-training-studio
                             <li class="scroll-to-section"><a href="registrati.html">Registrati</a></li>
                             <li class="scroll-to-section"><a href="login.html">Login</a></li>
                             <li class="scroll-to-section"><a href="setupTorneo.html">Crea Torneo</a></li>
+                            <li class="scroll-to-section"><a href="avviatorneo.html">Avvia torneo</a></li>
                             <li class="scroll-to-section"><a href="approvaSquadre.html">Approva squadre</a></li>
                             <li class="scroll-to-section"><a href="approvazioneArbitri.html">Approva arbitri</a></li>
                         </ul>
