--- a/frontend/loginMAF.html
+++ b/frontend/loginMAF.html
@@ -8,30 +8,6 @@
     <link rel="stylesheet" href="assets/css/ModificaStyle.css">
     <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.css" />
     <script src="./script.js"></script>
-</head>
-
-<body>
-    <!-- Header PAGINA DI MODIFICA -->
-    <section>
-        <div class="main-banner" id="top">
-            <div class="caption" bgcolour="grey">
-               <h2>Pagina di login<em><br> Manager di Federazione</em></h2>
-            </div>
-        </div>
-    </section>
-
-    <section class="body-form">
-        <div class="container">
-            <div class="form-type" id="firebaseui-auth-container">
-                <button onclick="startLoginWithGoogle()">Login con Google</button>
-            </div>
-        </div>
-    <br>
-    &nbsp;
-    <br>
-    </section>
-
-
     <script type="module">
         import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.8.1/firebase-app.js'
         import { getAuth, GoogleAuthProvider, signInWithPopup } from 'https://www.gstatic.com/firebasejs/9.8.1/firebase-auth.js'
@@ -96,6 +72,7 @@
                 alert("MAF autenticato correttamente");
                 let tokenCookie= "token="+token;
                 document.cookie=tokenCookie
+                location.href='index.html'
             })
             .fail(function(result) {
                 let response = result.responseJSON
@@ -108,5 +85,36 @@
             })
         }
     </script>
+</head>
+
+<body>
+    <!-- Header PAGINA DI MODIFICA -->
+    <section>
+        <div class="main-banner" id="top">
+            <div class="caption" bgcolour="grey">
+               <h2>Pagina di login<em><br> Manager di Federazione</em></h2>
+            </div>
+        </div>
+    </section>
+
+    <section class="body-form">
+        <div class="container">
+            <div class="form-type" id="firebaseui-auth-container">
+                <button onclick="startLoginWithGoogle()">Login con Google</button>
+            </div>
+        </div>
+    <br>
+    &nbsp;
+    <br>
+    </section>
+     <!-- Footer bottone HOME -->
+     <div class="footer">
+        <div class="button-home">
+            <button type="submit" onclick="location.href='index.html'">HOME</button>
+        </div>
+    </div>
+
+
+    
 </body>
 </html>
